   for local communication. Default bandwidth was 500MBps and latency was 15µs,
   which was rather bad. Default values have been changed to 10GBps and 0 latency.
   Options network/loopback-lat and network/loopback-bw have been added to adapt
   these values if needed. Network and routing models already providing separate
   loopbacks (clusters and such) are not impacted by this change.

General:
 - LTO is now enabled for Intel/clang compilers.
 - LTO behavior on GCC can be parameterized using LTO_EXTRA_FLAG in cmake.
   Setting it to "auto" will use all available cores, while setting it to n will
   use n cores to speedup link step (usage: cmake -DLTO_EXTRA_FLAG=4).

C interface:
 - Many MSG tests were converted to the new S4U's interface in C, that
   was extended for that.

Simix:
 - Remove obsolete option --cfg=contexts/parallel-threshold.

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
 - FG#41: Add sg_actor_create C interface
 - FG#43: xbt::random needs some care
 - FG#48: The Impossible Did Happen (yet again)
 - FG!24: Documentation and fix for xbt/random
 - FG!35: Add a modeling hint for parallel links in doc
 - FG!36: [xbt/random] Read/Write the state of the RNG
 - GF#18137: Allow different stack sizes?
 - GH#128: Parallelization of simulation with --cfg=contexts/nthreads
 - GH#139: Allow pthread creation in SMPI
 - GH#336: Packet-level simulation using SMPI?
 - GH!337: Fix link_energy plugin for wifi platforms
 - GH!339: Add Mailbox set_receiver method to python binding

----------------------------------------------------------------------------

SimGrid (3.25) February 2. 2020 (aka 02 02 2020)

The Palindrom Day Release.

Important user-visible changes:
 - Improve the Python usability (stability and documentation).
   - A nasty synchronization bug was ironed out, see also below.
   - Python's doc was organized as a separate tree, now integrated with C++.