@@ -1,8 +1,19 @@
 #!/usr/bin/env tesh
 
-$ ${bindir:=.}/s4u-actor-exiting ${platfdir}/small_platform.xml "--log=root.fmt:[%10.6r]%e(%P@%h)%e%m%n"
-> [ 10.194200] (A@Tremblay) I stop now
-> [ 10.194200] (maestro@) Actor A terminates now
-> [ 26.213694] (maestro@) Actor A gets destroyed now
-> [ 26.213694] (maestro@) Actor B terminates now
-> [ 26.213694] (maestro@) Actor B gets destroyed now
+$ ${bindir:=.}/s4u-actor-exiting ${platfdir}/small_platform.xml "--log=root.fmt:[%10.6r]%e(%P@%h)%e%m%n" --log=no_loc
+> [  1.000000] (A@Tremblay) I stop now
+> [  1.000000] (maestro@) Actor A terminates now
+> [  2.000000] (maestro@) Actor A gets destroyed now
+> [  2.000000] (maestro@) Actor B terminates now
+> [  3.000000] (maestro@) Actor B gets destroyed now
+> [  3.000000] (C@Ginette) And now, induce a deadlock by waiting for a message that will never come
+> 
+> 
+> [  3.000000] (maestro@) Oops! Deadlock or code not perfectly clean.
+> [  3.000000] (maestro@) 1 actors are still running, waiting for something.
+> [  3.000000] (maestro@) Legend of the following listing: "Actor <pid> (<name>@<host>): <status>"
+> [  3.000000] (maestro@) Actor 3 (C@Ginette): waiting for communication activity 0xdeadbeef () in state 0 to finish
+> [  3.000000] (C@Ginette) I was killed!
+> [  3.000000] (C@Ginette) The backtrace would be displayed here if --log=no_loc would not have been passed
+> [  3.000000] (maestro@) Actor C terminates now
+> [  3.000000] (maestro@) Actor C gets destroyed now
